# amazon-review-crawler

./: .gitignore  README.md  amazon_review_scraper.py  appveyor.yml  main.py  pyproject.toml  requirements.txt
src/: amazon_review_scraper.py  amazon_review_scraper_bak.py  main.py
